--- a/javascript-functions.html
+++ b/javascript-functions.html
@@ -386,7 +386,9 @@
             } else {
                 credits.style.display = 'none';
             }
-            event.stopPropagation();
+            if (event) {
+                event.stopPropagation();
+            }
         }
 
         document.addEventListener('click', function (event) {
